added a loading display when fetch request is being made

--- a/src/main.css
+++ b/src/main.css
@@ -10,6 +10,15 @@
     gap: 5px;
 }
 
+#weatherDisplay {
+    color: blue;
+}
+
+#loading {
+    color: black;
+    text-align: center;
+}
+
 img {
     height: 300px;
     width: auto;
